--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,12 @@
-<h1>Helo, <%=username%>!</h1>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+
+    <link  rel="stylesheet" href="/style.css">
+    <title>Hello page.</title>
+</head>
+<body>
+<h1>Hello, <%= username %>!</h1>
+</body>
+</html>
